--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body
 }
 
 /* ---------------- CUSTOM --------------------*/
+#watsi {
+	background: url('../images/watsi-bg2.jpg') no-repeat top center;
+	background-size: cover;
+}
 .title-tag {
 color: white;
 background: #4abd92;
