--- a/css/timeline.css
+++ b/css/timeline.css
@@ -77,7 +77,7 @@
 }
  
 .cbp_tmtimeline > li .cbp_tmlabel h2 { 
-font-size: 2em;
+font-size: 1.5em;
 line-height: 39px;
     margin-top: 0px;
     padding: 0 0 10px 0;
@@ -187,8 +187,8 @@ line-height: 39px;
  
     .cbp_tmtimeline > li .cbp_tmicon {
         position: relative;
-        float: right;
+        float: left;
         left: auto;
-        margin: -55px 5px 0 0px;
+        margin: 15px 5px 0 -46px;
     }   
 }
