--- a/css/demo.css
+++ b/css/demo.css
@@ -1,39 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700|Merriweather+Sans:800);
-
-@font-face {
-	font-weight: normal;
-	font-style: normal;
-	font-family: 'codropsicons';
-	src:url('../fonts/codropsicons/codropsicons.eot');
-	src:url('../fonts/codropsicons/codropsicons.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/codropsicons/codropsicons.woff') format('woff'),
-		url('../fonts/codropsicons/codropsicons.ttf') format('truetype'),
-		url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
-}
-
-@font-face {
-	font-family: 'Blokk';
-	src: url('../fonts/blokk/BLOKKRegular.eot');
-	src: url('../fonts/blokk/BLOKKRegular.eot?#iefix') format('embedded-opentype'),
-		 url('../fonts/blokk/BLOKKRegular.woff') format('woff'),
-		 url('../fonts/blokk/BLOKKRegular.svg#BLOKKRegular') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
 
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .clearfix:before, .clearfix:after { content: ''; display: table; }
 .clearfix:after { clear: both; }
-
-body {
-	position: relative;
-	background: #5f545a;
-	color: #faf1e0;
-	font-size: 100%;
-	line-height: 1.25;
-	font-weight: 300;
-	font-family: 'Lato', Arial, sans-serif;
-}
 
 .container {
 	background: #67c2d4;
@@ -261,7 +229,8 @@ section.related {
 }
 
 .js .fixed-block {
-	min-height: 300px;
+	background: #32414D;
+	min-height: 270px;
 	position: relative;
 }
 
