--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ body
 	background-size: cover;
 	overflow: auto;
 }
+.watsi-logo {
+	float:right; 
+	margin-top:40px;
+}
 .map {
 	background: url('../images/map.jpg') no-repeat top center;
 	background-size: cover;
